[package]
name = "istio-api-rs"
version = "0.4.0"
authors = ["BlankZhu"]
edition = "2021"
description = "A collection of CRDs for api used in Istio."
license = "Apache-2.0"
keywords = ["istio"]
homepage = "https://github.com/BlankZhu/istio-api-rs"
repository = "https://github.com/BlankZhu/istio-api-rs"
documentation = "https://docs.rs/istio-api-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
k8s-openapi = { version = "0.19.0", features = ["v1_24"] }

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
schemars = "^0.8"
k8s-openapi = { version = "^0.19.0" }
kube = { version = "0.80.0", features = ["derive"] }

[features]
v1_10 = []
v1_11 = []
v1_12 = []
v1_13 = []
v1_14 = []
v1_15 = []
v1_16 = []
v1_17 = []
v1_18 = []

[package.metadata.docs.rs]
features = ["v1_18"]