[package]
name = "istio-api-rs"
version = "0.12.0"
authors = ["BlankZhu"]
edition = "2021"
description = "A collection of CRDs for api used in Istio."
license = "Apache-2.0"
keywords = ["istio"]
homepage = "https://github.com/BlankZhu/istio-api-rs"
repository = "https://github.com/BlankZhu/istio-api-rs"
documentation = "https://docs.rs/istio-api-rs"
readme = "README.md"

[dependencies]
kube = { version = "^2.0.0", features = ["runtime", "derive"]}
k8s-openapi = { version = "^0.26.0", features = ["schemars"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
schemars = { version = "^1.0" }

[dev-dependencies]
k8s-openapi = { version = "0.26.0", features = ["v1_31"] }

[package.metadata.docs.rs]
features = ["v1_24"]

[features]
default = []
v1_10 = []
v1_11 = []
v1_12 = []
v1_13 = []
v1_14 = []
v1_15 = []
v1_16 = []
v1_17 = []
v1_18 = []
v1_19 = []
v1_20 = []
v1_21 = []
v1_22 = []
v1_23 = []
v1_24 = []
v1_25 = []
v1_26 = []
v1_27 = []
